crates/rattler_solve/tests/backends/snapshots/backends__libsolv_c__solve_dummy_repo_install_non_existent.snap
---
source: crates/rattler_solve/tests/backends/main.rs
expression: err
---
Unsolvable(
    [
        "nothing provides requested asdfasdf",
    ],
)
