crates/rattler_solve/tests/backends/snapshots/backends__libsolv_c__solve_with_error.snap
---
source: crates/rattler_solve/tests/backends/main.rs
expression: err
---
package foobar-2.0-bla_1 requires bors <2.0, but none of the providers can be installed
