crates/rattler_solve/tests/backends/snapshots/backends__libsolv_c__virtual_package_constrains.snap
---
source: crates/rattler_solve/tests/backends/main.rs
expression: output
---
package cuda-version-12.5-hd4f0392_3 has constraint __cuda >=12.1 conflicting with __cuda-1
